--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,9 +27,9 @@ nav:
     - 'Read feed': 'rome/getting-started/read-feed.md'
     - 'Convert feed': 'rome/getting-started/convert-feed.md'
     - 'Aggregate feeds': 'rome/getting-started/aggregate-feeds.md'
+    - 'Register additional date formats': 'rome/getting-started/register-additional-datetime-formats.md'
     - 'Preserve WireFeed': 'rome/getting-started/preserve-wirefeed.md'
     - 'Create a custom module': 'rome/getting-started/custom-module.md'
-    - 'Date parsing': 'rome/getting-started/date-parsing.md'
   - 'Technical Documentation':
     - 'Bean Utilities': 'rome/technical-docs/bean-utilities.md'
     - 'Common classes and interfaces': 'rome/technical-docs/common-classes-and-interfaces.md'
