--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,7 +45,6 @@ nav:
   - 'ROME Fetcher (deprecated)': 'rome-fetcher/index.md'
   - 'ROME Modules':
     - 'Overview': 'rome-modules/index.md'
-    - 'A9 OpenSearch': 'rome-modules/a9-opensearch.md'
     - 'Content': 'rome-modules/content.md'
     - 'Creative Commons': 'rome-modules/creative-commons.md'
     - 'GeoRSS': 'rome-modules/georss.md'
@@ -54,6 +53,7 @@ nav:
     - 'iTunes Podcasting': 'rome-modules/itunes-podcasting.md'
     - 'Microsoft Simple List Extensions': 'rome-modules/microsoft-simple-list-extensions.md'
     - 'Microsoft Simple Sharing Extensions': 'rome-modules/microsoft-simple-sharing-extensions.md'
+    - 'OpenSearch': 'rome-modules/opensearch.md'
     - 'Slash': 'rome-modules/slash.md'
     - 'Yahoo! MediaRSS': 'rome-modules/yahoo-mediarss.md'
     - 'Yahoo! Weather': 'rome-modules/yahoo-weather.md'
