--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,15 +45,23 @@ nav:
   - 'ROME Fetcher (deprecated)': 'rome-fetcher/index.md'
   - 'ROME Modules':
     - 'Overview': 'rome-modules/index.md'
+    - 'ActivityStreams': 'rome-modules/activitystreams.md'
+    - 'Apple iPhoto Photocasting': 'rome-modules/apple-iphoto-photocasting.md'
+    - 'Apple iTunes Podcasting': 'rome-modules/apple-itunes-podcasting.md'
+    - 'Atom': 'rome-modules/atom.md'
+    - 'Atom Threading Extentions': 'rome-modules/atom-threading-extensions.md'
     - 'Content': 'rome-modules/content.md'
     - 'Creative Commons': 'rome-modules/creative-commons.md'
+    - 'FeedBurner': 'rome-modules/feedburner.md'
+    - 'FeedPress': 'rome-modules/feedpress.md'
+    - 'fyyd': 'rome-modules/fyyd.md'
     - 'GeoRSS': 'rome-modules/georss.md'
     - 'Google Base': 'rome-modules/google-base.md'
-    - 'iPhoto Photocasting': 'rome-modules/iphoto-photocasting.md'
-    - 'iTunes Podcasting': 'rome-modules/itunes-podcasting.md'
     - 'Microsoft Simple List Extensions': 'rome-modules/microsoft-simple-list-extensions.md'
     - 'Microsoft Simple Sharing Extensions': 'rome-modules/microsoft-simple-sharing-extensions.md'
     - 'OpenSearch': 'rome-modules/opensearch.md'
+    - 'Podlove Simple Chapters': 'rome-modules/podlove-simple-chapters.md'
+    - 'Portable Contacts': 'rome-modules/portable-contacts.md'
     - 'Slash': 'rome-modules/slash.md'
     - 'Yahoo! MediaRSS': 'rome-modules/yahoo-mediarss.md'
     - 'Yahoo! Weather': 'rome-modules/yahoo-weather.md'
